--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
         "@types/react-dom": "18.0.6",
         "@typescript-eslint/eslint-plugin": "^5.31.0",
         "@typescript-eslint/parser": "^5.31.0",
+        "autoprefixer": "^10.4.8",
         "eslint": "^8.20.0",
         "eslint-config-next": "12.2.3",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^3.3.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "postcss": "^8.4.14",
         "prettier": "^2.7.1",
+        "tailwindcss": "^3.1.7",
         "typescript": "4.7.4"
     }
 }
