--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.8.3",
+        "axios": "^0.27.2",
         "next": "12.2.3",
         "next-redux-wrapper": "^7.0.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-redux": "^8.0.2",
-        "redux": "^4.2.0",
-        "redux-devtools-extension": "^2.13.9",
-        "redux-thunk": "^2.4.1"
+        "react-redux": "^8.0.2"
     },
     "devDependencies": {
         "@types/node": "18.6.2",
